# ovh_exporter

./: .gitignore  Dockerfile  Pipfile  README.md  auth.env.tmpl  config.yaml.tmpl  pyproject.toml
.github/workflows/: build.yml
certificates/: README.md  domain.crt  domain.key
devtools/prometheus/: docker-compose.yml
devtools/prometheus/grafana/provisioning/dashboards/: main.yaml
devtools/prometheus/grafana/provisioning/datasources/: prometheus-datasource.yml
devtools/prometheus/grafana/provisioning/ovh_exporter/: ovh_exporter.json
devtools/prometheus/prometheus/: prometheus.yml
devtools/scripts/: docker-reset.sh  docker-restart.sh  dump.sh
resources/jupyter/: ovh_exporter.ipynb
src/ovh_exporter/: __init__.py  auth.py  cli.py  collector.py  config.py  logger.py  ovh_client.py  wsgi.py
tests/: test_placeholder.py
