[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ovh_exporter"
description = "ovh_exporter tool"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Environment :: Console",
  "Topic :: Utilities",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
dependencies = [
  "click~=8.1.6",
  "ovh~=1.1",
  "PyYAML~=6.0",
  "prometheus_client<1",
  "python-dotenv~=1.0",
  "jsonschema",
  "gunicorn"
]

[[project.authors]]
name = "Laurent Almeras"
email = "lalmeras@gmail.com"

[project.urls]
repository = "https://github.com/lalmeras/ovh_exporter"
changelog = "https://github.com/lalmeras/ovh_exporter/blob/main/README.md"

[project.scripts]
ovh_exporter = "ovh_exporter.cli:main"

[tool.hatch.version]
path = "src/ovh_exporter/__init__.py"


[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]
[tool.coverage.run]
source_pkgs = ["ovh_exporter", "tests"]
branch = true
parallel = true
omit = []
[tool.coverage.paths]
ovh_exporter = ["src/ovh_exporter"]
tests = ["tests"]
[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]


[tool.hatch.envs.types]
dependencies = [
  "types-requests",
  "types-PyYAML",
  "types-jsonschema",
  "mypy"
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/}"
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
files = "src/ovh_exporter/**/*.py"
[[tool.mypy.overrides]]
module = [
  "path_dict",
  "ovh",
  "gunicorn.app.base",
  "gunicorn.app",
  "gunicorn"
]
ignore_missing_imports = true
